# students

./: Procfile  pyproject.toml  requirements.txt
apps/authorization/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/authorization/migrations/: 0001_initial.py  0002_userprofile_university.py
apps/studyplan/: admin.py  apps.py  form.py  models.py  urls.py  views.py
apps/studyplan/migrations/: 0001_initial.py  0002_alter_semester_term.py  0002_classschedule.py  0003_alter_semester_term_faculty_subject_faculty.py
config/: asgi.py  wsgi.py
config/settings/: base.py
config/settings/studyplan/: __init__.py
config/urls/: api.py
